# solana-test-framework

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: error.rs  lib.rs  util.rs
src/extensions/: banks_client.rs  mod.rs  program_test.rs  program_test_context.rs
src/extensions/client/: banks_client.rs  mod.rs  rpc_client.rs
tests/: banks_client.rs  banks_client_anchor.rs  helpers.rs  program_test.rs  program_test_anchor.rs  program_test_context.rs  rpc_client.rs
tests/artifacts/hello_world/: Cargo.toml
tests/artifacts/program_for_tests/: Cargo.toml
tests/artifacts/program_for_tests/src/: lib.rs
tests/testsuite/: banks_client.rs  helpers.rs  main.rs  program_test.rs  program_test_context.rs  rpc_client.rs
tests/testsuite/artifacts/: usdc_mint
tests/testsuite/artifacts/program_for_tests/: Anchor.toml  Cargo.toml
tests/testsuite/artifacts/program_for_tests/src/: lib.rs
