[package]
name = "solana-test-framework"
version = "1.14.0"
edition = "2021"
authors = ["lowprivuser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor = ["anchor-lang", "program-for-tests"]
pyth = ["pyth-sdk-solana"]

[dependencies]
solana-program-test = "1.14"
solana-sdk = "1.14"
solana-program ="1.14"
solana-banks-client = "1.14"
solana-program-runtime = "1.14"
solana-client = "1.14"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
anchor-lang = { version = "0.26.0", optional = true }
async-trait = "0.1.52"
futures = "0.3"
borsh = "0.9"
bincode = "1.3.3"
log = "0.4"
chrono-humanize = "0.2"
pyth-sdk-solana = { version = "0.7.0", optional = true }
serde = { version = "1.0.152"}
serde_json = { version = "1.0.91", optional = true }
thiserror = "1.0.38"

#cargo doesnt allow optional dev dependencies, so we have to put this as a dep if we want to fully seperate anchor and vanilla solana
program-for-tests = {path="tests/artifacts/program_for_tests", optional = true} 

[dev-dependencies]

hello_world = {path="tests/artifacts/hello_world"}
solana-test-validator = "1.14"
