[package]
name = "solana-test-framework"
version = "1.10.0"
edition = "2021"
authors = ["lowprivuser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor = ["anchor-lang"]

[dependencies]
solana-program-test = "1.10"
solana-sdk = "1.10"
solana-program = "1.10"
solana-banks-client = "1.10"
solana-program-runtime = "1.10"
solana-client = "1.10"
spl-token = "3.3.0"
spl-associated-token-account = "~1.0.5"
anchor-lang = { version = "0.25.0", optional = true }
async-trait = "0.1.52"
futures = "0.3"
borsh = "0.9"
bincode = "1.3.3"
log = "0.4"
chrono-humanize = "0.2"

[dev-dependencies]
program-for-tests = {path="tests/artifacts/program_for_tests"}
solana-test-validator = "1.10"