[package]
name = "solana-test-framework"
version = "1.18.0"
edition = "2021"
authors = ["isabel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor = ["anchor-lang"]
pyth = ["pyth-sdk-solana"]

[dependencies]
solana-program-test = "=1.18"
solana-sdk = "=1.18"
solana-program = "=1.18"
solana-banks-client = "=1.18"
solana-program-runtime = "=1.18"
solana-client = "=1.18"
spl-token = "=4.0.0"
spl-associated-token-account = "=2.3.0"
anchor-lang = { version = "0.30.1", optional = true }
async-trait = "0.1.81"
futures = "0.3"
borsh = "0.10.3"
bincode = "1.3.3"
log = "0.4"
chrono-humanize = "0.2"
pyth-sdk-solana = { version = "0.10.1", optional = true }
serde = { version = "1.0.207" }
serde_json = { version = "1.0.124", optional = true }
thiserror = "1.0.63"

[dev-dependencies]
program-for-tests = { path = "tests/testsuite/artifacts/program_for_tests" }
solana-test-validator = "=1.18"
