
[package]
name = "hello_world"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
solana-program = "1.14"

[dev-dependencies]
solana-program-test = "1.14"
solana-sdk = "1.14"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
